--- a/www.harvis.my/.htaccess
+++ b/www.harvis.my/.htaccess
@@ -3,8 +3,8 @@ DirectoryIndex index.php
 RewriteEngine on
 RewriteBase /
 Options +FollowSymlinks
-RewriteCond %{HTTP_HOST} ^www.harvis2.my
-RewriteRule ^(.*)$ http://harvis2.my/$1 [R=301,L]
+#RewriteCond %{HTTP_HOST} ^www.harvis2.my
+#RewriteRule ^(.*)$ http://harvis2.my/$1 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*) /?%{QUERY_STRING}
